# funcit

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  appveyor.yml  funcit.h  test.cpp
